add structured data checking

--- a/app/popup.html
+++ b/app/popup.html
@@ -30,6 +30,7 @@
       <li id="open-ogp-image">Open <span>ogp:image</span></li>
       <li id="open-canonical">Open <span>canonical</span></li>
       <li id="open-fb-debugger">Open <span>fb debugger</span></li>
+      <li id="open-structured-data">Open <span>structured data</span></li>
     </ul>
 
     <!-- build:js scripts/vendor.js -->
