add twitter:url|image checking

--- a/app/popup.html
+++ b/app/popup.html
@@ -26,8 +26,10 @@
 
     <p><img src="images/icon/eyeglasses22.png">Check &lt;meta|link&gt;</p>
     <ul>
-      <li id="open-ogp-url">Open <span>ogp:url</span></li>
-      <li id="open-ogp-image">Open <span>ogp:image</span></li>
+      <li id="open-og-url">Open <span>og:url</span></li>
+      <li id="open-og-image">Open <span>og:image</span></li>
+      <li id="open-twitter-url">Open <span>twitter:url</span></li>
+      <li id="open-twitter-image">Open <span>twitter:image</span></li>
       <li id="open-canonical">Open <span>canonical</span></li>
       <li id="open-fb-debugger">Open <span>fb debugger</span></li>
       <li id="open-structured-data">Open <span>structured data</span></li>
